--- a/nav.css
+++ b/nav.css
@@ -72,7 +72,7 @@
   left: 110%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: #555;
+  background-color: hsl(0, 0%, 33%);
   color: white;
   font-size: 16px;
   padding: 12px 24px;
