--- a/nav.css
+++ b/nav.css
@@ -86,3 +86,59 @@
   background-color: black;
 }
 
+/* https://coolors.co/393d3f-fdfdff-c6c5b9-62929e-546a7b*/
+* {box-sizing: border-box}
+body {
+	margin: 0;
+	background-color: #494949;
+	color: black;
+  font-family: 'Nunito', sans-serif;
+}
+
+#main {
+  margin-top: 50px;
+	padding: 0 20px;
+}
+
+.title{ 
+	color: white !important;
+	font-family: 'Lobster', sans-serif;
+} 
+
+h1 {
+  font-family: 'Raleway', sans-serif;
+	font-size: 35px;
+	color: #140959;
+	text-align: center;
+	width: 100%;
+}
+
+h2 {
+	font-size: 36px;
+		font-family: 'Raleway', sans-serif;
+	text-align: center;
+	width: 100%;
+}
+
+h3 {
+	font-size: 15px;
+		font-family: 'Raleway', sans-serif;
+	text-align: center;
+	width: 100%;
+}
+
+h4 {
+	font-size: 12px;
+		font-family: 'Raleway', sans-serif;
+	width: 100%;
+}
+h5 {
+	font-size: 20px;
+		font-family: 'Raleway', sans-serif;
+	width: 100%;
+}
+
+a {
+	font-family: 'Nunito', sans-serif;
+	color: black;
+}
