--- a/nav.css
+++ b/nav.css
@@ -137,7 +137,13 @@ h5 {
 		font-family: 'Raleway', sans-serif;
 	width: 100%;
 }
-
+h6{
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 0px;
+}
 a {
 	font-family: 'Nunito', sans-serif;
 	color: black;
