--- a/nav.css
+++ b/nav.css
@@ -148,3 +148,11 @@ a {
 	font-family: 'Nunito', sans-serif;
 	color: black;
 }
+img.smallBlue{
+  width: 10px;
+  height: 10px;
+  align-items: left;
+}
+p.centerText{
+  text-align: center;
+}
